--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Mandelbrot Explorer WebGL</title>
+    <title>Fractal Explorer WebGL</title>
     <script src="gl.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden">
